--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
         "laravelcollective/remote": "~5.2",
         "league/flysystem-sftp": "^1.0",
         "graham-campbell/flysystem": "^3.4",
-        "infyomlabs/swagger-generator": "dev-master",
-        "jlapp/swaggervel": "dev-master",
-        "doctrine/dbal": "~2.5"
+        "maatwebsite/excel": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,9 +20,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "appzcoder/crud-generator": "^1.0",
-        "infyomlabs/laravel-generator": "dev-master",
-        "infyomlabs/core-templates": "dev-master"
+        "appzcoder/crud-generator": "^1.0"
     },
     "autoload": {
         "classmap": [
