--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6.4",
         "ext-snmp": "*",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "~5.2",
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "~5.3",
         "league/flysystem-sftp": "^1.0",
         "graham-campbell/flysystem": "^3.4",
         "maatwebsite/excel": "^2.1",
@@ -18,10 +18,10 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "mockery/mockery": "~0.9.4",
+        "phpunit/phpunit": "~5.4",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "appzcoder/crud-generator": "^1.0"
     },
@@ -61,5 +61,7 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
