--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/remote": "~5.2",
         "league/flysystem-sftp": "^1.0",
         "graham-campbell/flysystem": "^3.4",
-        "maatwebsite/excel": "^2.1"
+        "maatwebsite/excel": "^2.1",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
