--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
+        "ext-snmp": "*",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "~5.2",
         "league/flysystem-sftp": "^1.0",
