--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "league/flysystem-sftp": "^1.0",
         "graham-campbell/flysystem": "^3.4",
         "maatwebsite/excel": "^2.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "whitehat101/apr1-md5": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
